# BaseBender

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  publish-pypi.yaml  publish-testpypi.yaml  release.yaml
docs/: STRUCTURE.md  api_examples.md  cli_examples.md
src/: cli.py
src/api/: main.py
src/basebender/: __init__.py  cli.py
src/basebender/api/: main.py
src/basebender/gui/: main_window.py
src/basebender/rebaser/: config_loader.py  digit_set_rebaser.py  digit_sets.py  models.py
src/gui/: main_window.py
src/rebaser/: STRUCTURE.md  config_loader.py  digit_set_rebaser.py
tests/: STRUCTURE.md  test_api.py  test_cli.py  test_config_loader.py  test_digit_sets.py  test_gui.py  test_rebaser.py
todo/: documentation.md  features_and_improvements.md  security_and_maintenance.md
