[tool.pytest.ini_options]
pythonpath = ["src"]
[project]
name = "rebaser"
version = "0.1.0"
description = "A Python module for rebaseing strings between different digit sets (positional number systems)."
authors = [
    {name = "by.a.mexc@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "platformdirs (>=4.2.0,<5.0.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]

[[tool.poetry.packages]]
include = "rebaser"
from = "src"

[[tool.poetry.packages]]
include = "api"
from = "src"

[[tool.poetry.packages]]
include = "gui"
from = "src"

[tool.poetry.scripts]
basebender = "src.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.2.5"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"


[tool.isort]
profile = "black"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
