[project]
name = "basebender"
version = "0.1.6"
description = "A Python module for rebaseing strings between different digit sets (positional number systems)."
authors = [
    {name = "by.a.mexc@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "platformdirs (>=4.2.0,<5.0.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
    "fastapi (>=0.115.12,<1.0.0)",
    "uvicorn (>=0.34.3,<1.0.0)",
]

[project.scripts]
basebender = "basebender.cli:main"
basebender-gui = "basebender.gui.main_window:run_gui"
basebender-api = "basebender.api.main:start_api"

[project.urls]
Homepage = "https://github.com/meXc/BaseBender"
Repository = "https://github.com/meXc/BaseBender.git"
Issues = "https://github.com/meXc/BaseBender/issues"

[dependency-groups]
dev = [
    "pytest >=9.0.1",
    "pre-commit >=4.5.0",
    "mypy >=1.15.0",
    "httpx2 >=2.4.0",
    "ruff >=0.11.0",
    "httpx2>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basebender"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
exclude = [
    "src/basebender/rebaser/generated/",
    "src/basebender/gui/",
]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PL"]
ignore = ["PLR2004", "PLC0415", "N802", "N803"]

[tool.ruff.lint.per-file-ignores]
"src/basebender/rebaser/generated/*" = ["E501", "N802", "N803"]

[tool.ruff.format]
quote-style = "double"
